# Micrograd_C-

./: .gitignore  CMakeLists.txt  README.md
demo/: demo.cpp  test.cpp
demo/dataset/: X.txt  data_maker.py
demo/test/: test.cpp
examples/: neural_net.cpp  neuron.cpp  ops_example.cpp  single_perceptron.cpp  training.cpp  video_example.cpp
include/micrograd/: engine.hpp  nn.hpp
python_demo/: mnist_book.ipynb
